[tool.poetry]
name = "python-web-05"
version = "0.1.0"
description = ""
authors = ["BogdanKozlov <bkozlov35@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
aiohttp = "^3.9.5"
names = "^0.3.0"
websockets = "^12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
